test: Trying to fix the input type "date" on IOS

--- a/client/src/style/travel_app/base.scss
+++ b/client/src/style/travel_app/base.scss
@@ -38,7 +38,6 @@ $primary-color: #1f2932;
   display: block;
   text-align: center;
   margin: 15px auto;
-  height: 30px;
   border: 0px;
   text-align: center;
 }
